Fix code block overflow

--- a/frontend/src/stylesheets/_layout.scss
+++ b/frontend/src/stylesheets/_layout.scss
@@ -69,6 +69,7 @@ a {
 
 .site-main {
   grid-area: main;
+  overflow-x: auto;
 }
 
 .site-main :first-child {
